--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -2,33 +2,101 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [ main, master ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, master ]
+    branches: [ main ]
 
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        shard: [1/3, 2/3, 3/3]
+
     steps:
     - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: 'npm'
     
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+        
     - name: Install dependencies
       run: npm ci
       
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      run: npx playwright install --with-deps chromium
       
     - name: Run Playwright tests
-      run: npm run test
+      run: npm run test:parallel -- --shard=${{ matrix.shard }}
       
-    - uses: actions/upload-artifact@v4
+    - name: Upload test results
+      uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: playwright-report
+        name: playwright-report-${{ matrix.shard }}
         path: playwright-report/
+        retention-days: 30
+        
+    - name: Upload cucumber report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: cucumber-report-${{ matrix.shard }}
+        path: cucumber-report.html
+        retention-days: 30
+        
+    - name: Upload test videos
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-videos-${{ matrix.shard }}
+        path: videos/
+        retention-days: 30
+        
+    - name: Upload screenshots
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: playwright-screenshots-${{ matrix.shard }}
+        path: screenshots/
+        retention-days: 30
+
+  report:
+    needs: test
+    runs-on: ubuntu-latest
+    if: always()
+
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        cache: 'npm'
+        
+    - name: Install dependencies
+      run: npm ci
+      
+    - name: Download all test results
+      uses: actions/download-artifact@v4
+      with:
+        path: all-results/
+        pattern: playwright-report-*/
+        
+    - name: Download all cucumber reports
+      uses: actions/download-artifact@v4
+      with:
+        path: all-reports/
+        pattern: cucumber-report-*/
+        
+    - name: Publish Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: playwright-report
+        path: all-results/
         retention-days: 30 
