--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "dotenv": "^16.4.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^20.11.19",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
-} 
+}
