--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "cucumber-js",
     "test:parallel": "cucumber-js --parallel 2",
-    "report": "node cucumber-html-report.js"
+    "report": "node cucumber-html-report.js",
+    "test:unit": "jest --ci --coverage --outputDirectory=jest-results"
   },
   "dependencies": {
     "@cucumber/cucumber": "^10.3.1",
@@ -16,7 +17,28 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "^20.11.19",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src"
+    ],
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "coverageDirectory": "jest-results/coverage",
+    "coverageReporters": [
+      "text",
+      "lcov",
+      "html"
+    ]
   }
 }
