--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -14,17 +14,14 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
+    - name: Setup Dependencies
+      uses: ./.github/actions/setup-dependencies
       with:
         node-version: '18'
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
+        cache-playwright: 'false'
       
     - name: Run unit tests
-      run: npm test:unit
+      run: npm run test:unit
       
     - name: Upload test results
       uses: actions/upload-artifact@v4
